Use ellipsis to prevent film titles from wrapping onto two lines

--- a/sass/_films.scss
+++ b/sass/_films.scss
@@ -21,6 +21,9 @@
         margin: 10px 0 20px;
         font-size: 14px;
         font-weight: 400;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         transition: color 1s;
     }
 
